completed 1st explorer chapter

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     </header>
     <main id="container">
     </main>
-    <!-- <footer>
-        <a href="https://github.com/LeahDaniel">Visit my Github Profile</a>
-        <p>Copyright</p>
-    </footer> -->
+    <footer>
+        <a href="https://github.com/LeahDaniel" style="color:rgb(55, 28, 7)">Visit my Github Profile</a>
+    </footer>
     <script type="module" src="./scripts/main.js"></script>
 </body>
 
